
--Fixed tutorial completed detection when playing back a recorded game.

--Fixed bug in tutorial power-up rigging when resuming tutorial after quitting.

--Improved tutorial wording.

--Shorted some tutorial phrases to fit on a 5:3 (SXGA) aspect ratio monitor.

--Prevented level-number collision with health bar at super-high levels by
  dynamically shrinking the font.




Version 6    2011-January-29

--Fixed a rounding error on some CPUs in screen aspect ratio calculation.

--Fixed so that playback of recorded games doesn't save tutorial bookmarks.

--Fixed bug that caused a tutorial message to be shown twice (thanks Allen).

--Player-typed text on pause screen can now scroll off top of typing area.

--Fixed text delete rate when user holds delete for longer than 5 seconds. 

--Rise markers are now never placed on floor bottlenecks.

--Improved risk/reward of deep power-up recursion (power-ups levels get higher
  at deeper levels, but sub-levels get harder).

--Added a shadow over bottom of dashboard to push it back visually.

--Player-typed messages on pause screen are now cumulative.

--Dramatically weakened spread power at lower levels.

--Dramatically weakened explosion power at lower levels.

--Fixed volume glitch when entering a sub-level.

--Gave following enemies a bullet speed and distance boost.

--Fixed enemy health bar rounding jitter at high max health levels.

--Fixed more bugs in tutorial rigging.




Version 5   2011-January-25

--Fixed tutorial crash (thanks Stephen Lavelle).

--Added support for non-4:3 monitors (without black bars on sides).

--Added tutorial bookmarking.

--Rise marker sonar beat now modulated by path-finding distance instead of
  crow-flies distance for better feedback.

--Raised loudness of rise marker beat and lowered loudness of player part.




Version 4   2011-January-23

--Fixed vertical screen position after zoom.

--Fixed health bar mismatch if power-up picked up right before rise.
